# TestVideo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/xiaodong/testvideo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/FFmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/java/com/example/xiaodong/testvideo/: AppCompatPreferenceActivity.kt  BitmapCallback.java  BitmapCallbackForCamera.kt  CallbackForCamera.kt  CallbackFromJNI.java  Camera.kt  CameraDest.kt  CameraDestAdapter.kt  CameraDestEditActivity.kt  CameraDestProperty.kt  CameraDestPropertyAdapter.kt  CameraDestPropertyView.kt  CameraEditActivity.kt  CameraService.kt  CameraSettingsActivity.kt  CameraSourceProperty.kt  CameraSourcePropertyAdapter.kt  CameraUtil.kt  CameralAdapter.kt  DBOpenHelper.kt  FFmpeg.kt  FileManager.kt  FinishCallback.java  FinishCallbackForCamera.kt  MainActivity.kt  VideoPlayActivity.kt  VideoProcessTask.kt  WrappedExpandableListView.kt  WrappedListView.kt
app/src/main/jniLibs/arm64-v8a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavutil.pc  libpostproc.pc  libswresample.pc
app/src/main/jniLibs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  librtmp.pc  libswresample.pc  libswscale.pc  x264.pc
app/src/main/res/drawable/: expandible_child_indicator.xml  expandible_group_indicator.xml
app/src/main/res/layout/: activity_camera_dest_edit.xml  activity_camera_edit.xml  activity_main.xml  activity_video_play.xml  camera_dest_header.xml  camera_dest_layout.xml  camera_dest_property_header.xml  camera_dest_property_layout.xml  camera_header.xml  camera_source_property_header.xml  camera_source_property_layout.xml  cameras_layout.xml  listview_footer.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: pref_headers.xml
app/src/test/java/com/example/xiaodong/testvideo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
